# substrate-node-template

./: README.md
node/: Cargo.toml
node/src/: rpc.rs
pallets/template/: Cargo.toml  README.md
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/runtime-api/: Cargo.toml
pallets/template/rpc/runtime-api/src/: lib.rs
pallets/template/rpc/src/: lib.rs
pallets/template/src/: file_merkle_tree.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
